--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -90,22 +90,6 @@ h6 {
   z-index: 997;
 }
 
-.header .logo {
-  line-height: 1;
-}
-
-.header .logo img {
-  max-height: 32px;
-  margin-right: 8px;
-}
-
-.header .logo h1 {
-  font-size: 30px;
-  margin: 0;
-  font-weight: 4700;
-  color: var(--heading-color);
-}
-
 .scrolled .header {
   box-shadow: 0px 0 18px rgba(0, 0, 0, 0.1);
 }
@@ -510,6 +494,7 @@ section,
   width: 100%;
   min-height: 100vh;
   position: relative;
+  overflow: hidden;
   padding: 80px 0;
   display: flex;
   align-items: center;
