--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -557,7 +557,7 @@ section,
   color: var(--accent-color);
 }
 
-@media (max-width: 768px) {
+@media only screen and (max-width: 768px) {
   .hero h2 {
     font-size: 32px;
   }
@@ -565,7 +565,6 @@ section,
   .hero p {
     font-size: 20px;
   }
-}
 
 /*--------------------------------------------------------------
 # About Section
