--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -501,22 +501,24 @@ section,
   justify-content: center;
 }
 
-.hero img {
+.hero {
+  width: 100%;
+  min-height: 100vh;
   position: relative;
+  padding: 80px 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.hero img {
+  position: absolute;
   inset: 0;
   display: block;
   width: 100%;
-  height: auto;
+  height: 100%;
   object-fit: cover;
   z-index: 1;
-}
-
-.hero:before {
-  content: "";
-  background: color-mix(in srgb, var(--background-color), transparent 80%);
-  position: absolute;
-  inset: 0;
-  z-index: 2;
 }
 
 .hero .container {
